package edu.hitsz.observer;

public interface SupplyEffectObserver {

    void onBombSupply();

    void onFreezeSupply();
}
